--- a/src/main/resources/templates/front/swift/model.mustache
+++ b/src/main/resources/templates/front/swift/model.mustache
@@ -3,8 +3,8 @@ import Foundation
 import SwiftUI
 
 enum {{entity}}Type: String, Codable, CaseIterable {
-    case type1 = "Type1"
-    case type2 = "Type2"
+    case type1 = "IN"
+    case type2 = "OUT"
 }
 
 @Model
